Cleaning up the code some.

--- a/src/AppBundle/Resources/views/Cart/cart-header.html.twig
+++ b/src/AppBundle/Resources/views/Cart/cart-header.html.twig
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-md-2 col-sm-4 col-md-offset-4">
-                <div class="stats-overview stat-block">
+                <div class="stats-overview stat-block alert alert-success">
                     <div class="display stat bad huge">
                     </div>
                     <div class="details">
