--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -21,8 +21,8 @@
                 </div>
                 <div ng-if="numItems != 0">
                     {% verbatim %}
-                            <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
-                                <thead>
+                            <table id="cart-table" class="table table-striped table-bordered" cellspacing="0" style="margin-top: -7px;">
+                                <thead style="background: #fff;">
                                 <tr>
                                     <th>PRODUCT #</th>
                                     <th>DESCRIPTION</th>
