Cleaning up the code some.

--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -107,7 +107,7 @@
         <div class="row ">
             <div class="col-md-12">
                 <div class="portlet">
-                    <div class="portlet-title">
+                    <div class="portlet-title" style="background-color: #f2dede !important;">
                         <div class="caption">
                             <i class="fa fa-bell"></i>SUBMITTED ORDERS TO BE APPROVED
                         </div>
@@ -177,7 +177,7 @@
         <div class="row ">
             <div class="col-md-12">
                 <div class="portlet">
-                    <div class="portlet-title">
+                    <div class="portlet-title" style="background-color: #d9edf7;">
                         <div class="caption">
                             <i class="fa fa-bell"></i>RECENTLY APPROVED
                         </div>
