Pushing changes and setting up to fix the final few things.

--- a/src/AppBundle/Resources/views/Cart/cart-header.html.twig
+++ b/src/AppBundle/Resources/views/Cart/cart-header.html.twig
@@ -54,7 +54,7 @@
                     </div>
                     <div class="details">
                         <div class="title">
-                            Current User
+                            Requester
                         </div>
                         <hr>
                         <div class="numbers">
