--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -4,7 +4,7 @@
 {% block cart %}
     <div class="row">
     <div id="shopping-cart" class="col-md-12">
-        <div class="stats-overview stat-block">
+        <div class="stats-overview stat-block" style="border-color: #e2001a; border-width: 5px; border-style: solid;">
             <div class="display stat ok huge">
 
             </div>
@@ -80,7 +80,7 @@
                             </table>
                             {% endverbatim %}
                     <div class="row">
-                        <a class="btn btn-primary" style="float: right;margin-right: 20px; margin-bottom: 20px;"
+                        <a class="btn btn-primary" style="float: right;margin-right: 20px; margin-bottom: 20px;  "
                            href="{{ path('review_order') }}">REVIEW ORDER</a>
                     </div>
                 </div>
