--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -25,6 +25,15 @@
     font-size: 12px !important;
 }
 
+.btn-primary {
+    background-color: #e2001a !important;
+    border-color: #e2001a !important;
+}
+
+.btn-primary:hover {
+    background-color: #9E0012 !important;
+}
+
 .form-control {
     font-size: 12px !important;
 }
