--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -242,7 +242,7 @@ legend {
     width:100%;
     display:block;
     border-radius:3px;
-    font-size:18px;
+    font-size: 18px !important;
     transition:opacity .4s;
     text-align:left;
     height:auto;
