--- a/src/AppBundle/Resources/views/Part/edit.html.twig
+++ b/src/AppBundle/Resources/views/Part/edit.html.twig
@@ -15,12 +15,26 @@
         form {
             display: inline;
         }
+
+        #preview-pane {
+            padding-bottom: 20px;
+
+        }
     </style>
     <div class="col-md-6">
 
 
         {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
+
+        {% if part.webPath %}
+            <div id="preview-pane">
+                <div class="preview-container">
+                    <img src="/{{ part.webPath }}" width="150"/><br/>
+                </div>
+            </div>
+        {% endif %}
+
         <input class="btn btn-success" type="submit" value="Update"/>
         {{ form_end(edit_form) }}
         {{ form_start(delete_form) }}
