Finished the Admin and started working on displaying the images on click for the user's cart.

--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -2,6 +2,104 @@
 {% block title %}Home{% endblock %}
 
 {% block cart %}
+    <style>
+        /* Style the Image Used to Trigger the Modal */
+        #myImg {
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        #myImg:hover {
+            opacity: 0.7;
+        }
+
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0); /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+        }
+
+        /* Modal Content (Image) */
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+
+        /* Caption of Modal Image (Image Text) - Same Width as the Image */
+        #caption {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+            text-align: center;
+            color: #ccc;
+            padding: 10px 0;
+            height: 150px;
+        }
+
+        /* Add Animation - Zoom in the Modal */
+        .modal-content, #caption {
+            -webkit-animation-name: zoom;
+            -webkit-animation-duration: 0.6s;
+            animation-name: zoom;
+            animation-duration: 0.6s;
+        }
+
+        @-webkit-keyframes zoom {
+            from {
+                -webkit-transform: scale(0)
+            }
+            to {
+                -webkit-transform: scale(1)
+            }
+        }
+
+        @keyframes zoom {
+            from {
+                transform: scale(0)
+            }
+            to {
+                transform: scale(1)
+            }
+        }
+
+        /* The Close Button */
+        .fa-times {
+            position: absolute;
+            top: 40px;
+            right: 75px;
+            color: #f1f1f1;
+            font-size: 60px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .fa-times:hover,
+        .fa-times:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* 100% Image Width on Smaller Screens */
+        @media only screen and (max-width: 700px) {
+            .modal-content {
+                width: 100%;
+            }
+        }
+    </style>
     <div class="row">
     <div id="shopping-cart" class="col-md-12">
         <div class="stats-overview stat-block" style="border-color: #e2001a; border-width: 5px; border-style: solid;">
@@ -136,7 +234,11 @@
                                     <td>{{ product.stockNumber }}</td>
                                     <td>
                                         <center>
-                                            <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
+                                            <a onclick="popup({{ product.id }})" style="    cursor: pointer;">
+                                                <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
+                                                <img id="{{ product.id }}-img" src="/{{ product.webPath }}" width="0"
+                                                     height="0" style="display: none;">
+                                            </a>
                                         </center>
                                     </td>
                                     <td>{{ product.description }}</td>
@@ -159,10 +261,48 @@
             </div>
         </div>
     </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal" style="display: none;">
+
+        <!-- The Close Button -->
+        <span onclick="document.getElementById('myModal').style.display='none'">
+        <a class="fa fa-times">
+        </a>
+        </span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="img01">
+
+        <!-- Modal Caption (Image Text) -->
+        <div id="caption"></div>
+    </div>
 {% endblock cart %}
 
 {% block footer %}
     <script>
+
+        var modal = document.getElementById('myModal');
+        var captionText = document.getElementById("caption");
+        var modalImg = document.getElementById("img01");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        };
+
+        function popup(id) {
+            var img = document.getElementById(id + "-img");
+            console.log('matt');
+            modal.style.display = "block";
+            modalImg.src = img.src;
+            modalImg.alt = img.alt;
+            captionText.innerHTML = img.alt;
+        }
+
         $(document).ready(function () {
             oTable = $('#part-table').DataTable({
                 "paging": false,
